Fix an align-items setting, now 'center'.

--- a/SDP/wwwroot/css/style.css
+++ b/SDP/wwwroot/css/style.css
@@ -283,7 +283,7 @@ header #header-brand .material-icons {
 header #header-search {
   display: inline-block;
   margin: 1.5rem 0 1rem 0;
-  align-items: middle;
+  align-items: center;
 }
 
 header #header-search input[type=search], #confirmEmail {
